--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -2,4 +2,7 @@ $android-normal-edit-text-color: #a9a9a9;
 
 $ios-primary-color: #007aff;
 $ios-border-color: #c8c8c8;
+$ios-web-view-border-color: #b8b8b8;
+$ios-web-view-background-color: #1e5da4;
+$android-web-view-background-color: #35a547;
 $ios-placeholder-color: #c7c7cd;
