Starting implementing listView

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -310,7 +310,9 @@ html, body {
 }
 
 .android .control-web-view .control-content:after {
-  content: "WebView";
+  font-size: $control-icon-font-size;
+  font-family: FontAwesome;
+  content: $fa-var-globe;
   color: #fff;
   margin: auto;
 }
