--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -141,6 +141,15 @@ html, body {
   justify-content: center;
 }
 
+.control-list-view {
+  background-color: #fff;
+}
+
+.control-list-view:hover {
+  border: solid 1px #ccc;
+  border-radius: 5px; 
+}
+
 .control-button .control-content {
 
 }
