Added listViewCell. Lack of style

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -150,6 +150,10 @@ html, body {
   border-radius: 5px; 
 }
 
+.control-list-view-cell {
+  position: relative;
+}
+
 .control-button .control-content {
 
 }
