--- a/app/templates/views/ui_list_view_view.hbs
+++ b/app/templates/views/ui_list_view_view.hbs
@@ -1,2 +1,6 @@
-<div class="control-content">{{title}}</div>
 {{#link-to "controlListView" this tagName="div" class="inner-control"}}{{/link-to}}
+<div class="control-content">
+  {{#each listViewCells}}
+    {{view App.ListViewCellView}}
+  {{/each}}
+</div>
