--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -2,10 +2,15 @@ $control-view-background-opacity: 0.6;
 $control-icon-font-size: 25px;
 
 $android-normal-edit-text-color: #a9a9a9;
+$android-list-view-cell-border-color: #d9d9d9;
+$android-web-view-background-color: #35a547;
+$android-list-view-cell-border-font-size: 15px;
+
 
 $ios-primary-color: #007aff;
 $ios-border-color: #c8c8c8;
 $ios-web-view-border-color: #b8b8b8;
 $ios-web-view-background-color: #1e5da4;
-$android-web-view-background-color: #35a547;
 $ios-placeholder-color: #c7c7cd;
+$ios-list-view-cell-border-color: #c8c7cc;
+$ios-list-view-cell-border-font-size: 16px;
