--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -145,7 +145,7 @@ html, body {
   background-color: #fff;
 }
 
-.control-list-view:hover {
+.control-list-view:hover, .control-grid-view:hover {
   box-shadow: 0 0 0 1px #ccc;
   border-radius: 5px; 
 }
@@ -155,6 +155,17 @@ html, body {
 }
 
 .control-list-view-cell .control-content {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.control-grid-view-cell {
+  position: relative;
+  display: inline-block;
+}
+
+.control-grid-view-cell .control-content {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -238,6 +249,14 @@ html, body {
   width: auto;
   border-bottom: solid 1px $ios-list-view-cell-border-color;
   font-size: $ios-list-view-cell-border-font-size;
+}
+
+.ios .control-grid-view-cell {
+  height: 50px;
+  width: 50px;
+  margin: 5px;
+  border-radius: 2px;
+  box-shadow: 0px 0px 4px 2px #bbb;
 }
 
 /*** Menus -> iOS ***/
@@ -467,6 +486,14 @@ html, body {
   width: auto;
   border-bottom: solid 1px $android-list-view-cell-border-color;
   font-size: $android-list-view-cell-border-font-size;
+}
+
+.android .control-grid-view-cell {
+  height: 50px;
+  width: 50px;
+  margin: 5px;
+  border-radius: 2px;
+  box-shadow: 0px 0px 4px 2px #bbb;
 }
 
 /* Drag & Drop */
