--- a/app/templates/control_videocamera_controller/index.hbs
+++ b/app/templates/control_videocamera_controller/index.hbs
@@ -1,7 +1,7 @@
 <div class="col-md-3">
   <div class="panel panel-info">
       <div class="panel-heading">
-          <h3 class="panel-title">{{name}}</h3>
+          <h3 class="panel-title">Photocamera Controller</h3>
       </div>
       <div class="panel-body">
         <ul class="nav nav-tabs">
@@ -13,9 +13,7 @@
         <div class="tab-content">
           <div class="tab-pane fade in active" id="home">
             {{input-text label="Name" value=name action='acceptChanges'}}
-            {{input-text label="Hardware file" value=sourceType.hardwareFile action='acceptChanges'}}
-            {{input-text label="Local file" value=sourceType.localFile action='acceptChanges'}}
-            {{input-text label="Remote file" value=sourceType.remoteFile action='acceptChanges'}}
+            {{input-select label="Video View" content=videoViews optionLabelPath="content.name" optionValuePath="content" selection=videoView prompt="Select video view"}}
           </div>
           <div class="tab-pane fade" id="position">
             {{partial "partials/ui_control_position"}}
