Added export page, added filesaver

--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -10,6 +10,9 @@
         </div>
       </div>
       <div class="col-md-4">
+        <div class="pull-right">
+          {{#link-to 'model' class="btn btn-default"}}Model{{/link-to}}
+        </div>
       </div>
     </div>
   </div>
