Changed store with local storage. NEED FIX polymorphic relationships

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -16,6 +16,11 @@
                     <li>{{#link-to 'about'}}About{{/link-to}}</li>
 
                 </ul>
+                <ul class="nav navbar-nav pull-right">
+                    <li><a {{action 'deleteApp'}}>Delete App</a></li>
+                    <li><a {{action 'createApp'}}>Create App</a></li>
+
+                </ul>
             </div>
         </div>
     </nav>
