Added blob.js, starting implementing xml model generation

--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -11,7 +11,7 @@
       </div>
       <div class="col-md-4">
         <div class="pull-right">
-          {{#link-to 'model' class="btn btn-default"}}Model{{/link-to}}
+          <button class="btn btn-default" {{action 'generateAppModel'}}>Model</button>
         </div>
       </div>
     </div>
