--- a/app/templates/control_list_view_cell/index.hbs
+++ b/app/templates/control_list_view_cell/index.hbs
@@ -4,6 +4,7 @@
           <h3 class="panel-title">{{name}}</h3>
       </div>
       <div class="panel-body">
+        {{partial "partials/first_commands"}}
         {{#link-to 'controlListView' parentListView class="btn btn-default btn-block"}}
           <i class="fa fa-pencil-square-o"></i> Edit list view
         {{/link-to}}
