--- a/app/templates/view_controller/index.hbs
+++ b/app/templates/view_controller/index.hbs
@@ -4,6 +4,7 @@
 	        <h3 class="panel-title">{{name}}</h3>
 	    </div>
 	    <div class="panel-body">
+        {{partial "partials/first_commands"}}
         <ul class="nav nav-tabs">
           <li class="active"><a href="#home" data-toggle="tab"><i class="fa fa-pencil"></i></a></li>
           <li><a href="#hierarchy" data-toggle="tab"><i class="fa fa-sitemap"></i></a></li>
