Added deletion for uiControls and beautifier for XML.

--- a/app/templates/control_audio_recorder/index.hbs
+++ b/app/templates/control_audio_recorder/index.hbs
@@ -28,7 +28,7 @@
       </div>
       <div class="panel-footer">
          <div class="btn-group">
-            <button type="button" class="btn btn-default" {{action "deleteViewController"}}>
+            <button type="button" class="btn btn-default" {{action "deleteUiControl"}}>
               <i class="fa fa-trash-o"></i> 
             </button>
           </div>
