--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -138,7 +138,7 @@ html, body {
   display: flex;
   overflow: hidden;
   align-items: center;
-  justify-content: center;
+  //justify-content: center;
 }
 
 .control-list-view {
@@ -310,7 +310,7 @@ html, body {
 /********************************** Android **********************************/
 /*** ScreenView -> Android ***/
 .android .device-screen-view {
-  font: 15px "Roboto", ".Helvetica NeueUI", "Helvetica Neue", sans-serif;
+  font: 14px "Roboto", ".Helvetica NeueUI", "Helvetica Neue", sans-serif;
 }
 
 .android .device-screen-view .action-bar {
