--- a/app/templates/view_controller/index.hbs
+++ b/app/templates/view_controller/index.hbs
@@ -13,6 +13,9 @@
         <div class="tab-content">
           <div class="tab-pane fade in active" id="home">
             {{input-text label="Name" value=name action='acceptChanges'}}
+            <label {{bind-attr class=":btn :btn-default launcher:active"}}>
+              {{input type="checkbox" checked=launcher class="hidden"}} <i class="fa fa-home"></i> Set launcher
+            </label>
           </div>
           <div class="tab-pane fade" id="hierarchy">
             <div class="tree">
