Now uiControls with SourceType are saved properly

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -138,7 +138,10 @@ html, body {
   display: flex;
   overflow: hidden;
   align-items: center;
-  //justify-content: center;
+}
+
+.control-web-view, .control-image-view, .control-video-view {
+  justify-content: center;
 }
 
 .control-list-view {
