--- a/app/templates/app_menu_item/index.hbs
+++ b/app/templates/app_menu_item/index.hbs
@@ -19,7 +19,7 @@
           <div class="tab-pane fade in active" id="home">
             {{input-text label="Name" value=name action='acceptChanges'}}
             {{input-text label="Title" value=title action='acceptChanges'}}
-            {{input-select label="Click listener" content=controllers.viewControllers.model optionLabelPath="content.name" optionValuePath="content" selection=navigationTarget prompt="Navigate to:"}}
+            {{input-select label="Click listener" content=controllers.viewControllers.model optionLabelPath="content.name" optionValuePath="content" selection=navigationTarget}}
           </div>
           <div class="tab-pane fade" id="position">
           </div>
