--- a/app/templates/views/device_screen_view.hbs
+++ b/app/templates/views/device_screen_view.hbs
@@ -5,7 +5,7 @@
 {{/each}}
 
 <div class="status-bar"></div>
-<div class="action-bar">{{controllers.editor.name}}</div>
+<div class="action-bar"><div class="bar-content">{{controllers.editor.name}}</div></div>
 {{#if hasMenu}}
   {{view App.MenuvView}}
 {{/if}}
