--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -301,7 +301,15 @@ html, body {
   display: none;
 }
 .ios .device-screen-view .status-bar {
-  
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  height: 62px;
+  border-bottom: solid 1px #b2b2b2;
+  background-image: url("../images/ui_controls/ios/status_bar.png");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
 }
 
 .ios .device-screen-view .command-bar {
