iOS UI improvements (listCell, buttons)

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -9,6 +9,7 @@ $android-list-view-cell-border-font-size: 15px;
 
 $ios-primary-color: #007aff;
 $ios-border-color: #c8c8c8;
+$ios-button-view-color: #3e5887;
 $ios-web-view-border-color: #b8b8b8;
 $ios-web-view-background-color: #1e5da4;
 $ios-placeholder-color: #c7c7cd;
