--- a/app/templates/components/input-select.hbs
+++ b/app/templates/components/input-select.hbs
@@ -2,5 +2,5 @@
   <label>
     {{label}}
   </label>
-  {{view Ember.Select class="form-control" viewName="select" content=content optionLabelPath=optionLabelPath optionValuePath=optionValuePath selection=selection prompt=prompt}}
+  {{view Ember.Select class="form-control" viewName="select" content=content optionLabelPath=optionLabelPath optionValuePath=optionValuePath value=selection prompt=prompt}}
 </div>
