--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -189,12 +189,22 @@ html, body {
 
 /********************************** iOS **********************************/
 
-.control-button.ios {
+.ios .control-audio-player-view .control-content {
+  display: flex;
+  flex-flow: row no-wrap;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.ios .control-button {
   color: $ios-primary-color;
   font-weight: bold;
 }
 
-.control-button.ios a {
+.ios .control-button a {
   text-decoration: none;
 }
 
