Improved CSS (audioPlayer), bug fixes for sourceType, added photo camera controller UI

--- a/app/templates/views/ui_photocamera_controller_view.hbs
+++ b/app/templates/views/ui_photocamera_controller_view.hbs
@@ -1,2 +1,2 @@
-<div class="control-content">PhotoController</div>
+<div class="control-content">Fotocamera</div>
 {{#link-to "controlPhotocameraController" this tagName="div" class="inner-control"}}{{/link-to}}
