AudioRecorder is shown properly both iOS and Android mockup

--- a/app/templates/views/ui_audio_recorder_view.hbs
+++ b/app/templates/views/ui_audio_recorder_view.hbs
@@ -1,2 +1,2 @@
-<div class="control-content">AudioRecorder</div>
+<div class="control-content">Rec</div>
 {{#link-to "controlAudioRecorder" this tagName="div" class="inner-control"}}{{/link-to}}
