Now videocameraController is shown properly both iOS and Android, fixed bug for model generation in videocameraController

--- a/app/templates/views/ui_videocamera_controller_view.hbs
+++ b/app/templates/views/ui_videocamera_controller_view.hbs
@@ -1,2 +1,2 @@
-<div class="control-content">VideoController</div>
+<div class="control-content">Videocamera</div>
 {{#link-to "controlVideocameraController" this tagName="div" class="inner-control"}}{{/link-to}}
