Improved graphics editing menu

--- a/app/templates/view_controller/index.hbs
+++ b/app/templates/view_controller/index.hbs
@@ -37,8 +37,14 @@
           </div>
           <div class="btn-group pull-right">
             {{#link-to 'appMenu' application.menu class="btn btn-default"}}
-              <i class="fa fa-pencil-square-o"></i> Edit menu
-            {{/link-to}}
+                <i class="fa fa-bars"></i>
+              {{/link-to}}
+              {{#link-to 'appMenu' application.menu class="btn btn-default"}}
+                <i class="fa fa-bell"></i>
+              {{/link-to}}
+              {{#link-to 'appMenu' application.menu class="btn btn-default"}}
+                <i class="fa fa-spinner"></i>
+              {{/link-to}}
           </div>  
 	    </div>
 	</div>
