--- a/app/templates/app_menu_item/index.hbs
+++ b/app/templates/app_menu_item/index.hbs
@@ -1,13 +1,15 @@
 <div class="col-md-3">
   <div class="panel panel-info">
       <div class="panel-heading">
-          <h3 class="panel-title">{{name}}</h3>
+        <h3 class="panel-title">
+          {{#link-to 'appMenu' parentMenu class="btn btn-default btn-sm"}}
+            <i class="fa fa-mail-reply"></i>
+          {{/link-to}} 
+          {{name}}
+        </h3>
       </div>
       <div class="panel-body">
         {{partial "partials/first_commands"}}
-        {{#link-to 'appMenu' parentMenu class="btn btn-default btn-block"}}
-          <i class="fa fa-pencil-square-o"></i> Edit menu
-        {{/link-to}}
 
         <ul class="nav nav-tabs spacer">
           <li class="active"><a href="#home" data-toggle="tab"><i class="fa fa-pencil"></i></a></li>
