Added alertDialogs. Need implementation of model generation

--- a/app/templates/app_menu/index.hbs
+++ b/app/templates/app_menu/index.hbs
@@ -17,7 +17,7 @@
         {{#if isCreating}}
           <li class="list-group-item">
             <div class="input-group">
-              {{focus-input value=newNameMenuItem class="form-control" focus-out="createMenuItem" insert-newline="createMenuItem"}}
+              {{focus-input value=newNameMenuItem class="form-control" insert-newline="createMenuItem"}}
               <span class="input-group-btn">
                 <button type="button" class="btn btn-default" {{action "createMenuItem"}}>
                   <i class="fa fa-save"></i> 
