--- a/app/templates/view_controller/index.hbs
+++ b/app/templates/view_controller/index.hbs
@@ -7,6 +7,8 @@
         {{partial "partials/first_commands"}}
         <ul class="nav nav-tabs">
           <li class="active"><a href="#home" data-toggle="tab"><i class="fa fa-pencil"></i></a></li>
+          <li><a href="#alert-dialogs" data-toggle="tab"><i class="fa fa-bell"> {{alertDialogs.length}}</i></a></li>
+          <li><a href="#progress-dialogs" data-toggle="tab"><i class="fa fa-spinner"></i></a></li>
           <li><a href="#hierarchy" data-toggle="tab"><i class="fa fa-sitemap"></i></a></li>
         </ul>
 
@@ -16,6 +18,23 @@
             <label {{bind-attr class=":btn :btn-default :btn-block launcher:active"}}>
               {{input type="checkbox" checked=launcher class="hidden"}} <i class="fa fa-home"></i> Set launcher
             </label>
+          </div>
+
+          <div class="tab-pane fade" id="alert-dialogs">
+            <br>
+            <button type="button" class="btn btn-default btn-block" {{action "createAlertDialog"}}>
+              <i class="fa fa-plus"></i> Add alert dialog
+            </button>
+            <ul class="list-group">
+              {{#each item in alertDialogs}}
+                <li class="list-group-item">
+                  {{#link-to "alertDialog" item}}{{item.name}}{{/link-to}}
+                </li>
+              {{/each}}
+            </ul>
+          </div>
+          <div class="tab-pane fade" id="progress-dialogs">
+            progress
           </div>
           <div class="tab-pane fade" id="hierarchy">
             <div class="tree">
