Little change to viewController view

--- a/app/templates/view_controller/index.hbs
+++ b/app/templates/view_controller/index.hbs
@@ -56,13 +56,7 @@
           </div>
           <div class="btn-group pull-right">
             {{#link-to 'appMenu' application.menu class="btn btn-default"}}
-                <i class="fa fa-bars"></i>
-              {{/link-to}}
-              {{#link-to 'appMenu' application.menu class="btn btn-default"}}
-                <i class="fa fa-bell"></i>
-              {{/link-to}}
-              {{#link-to 'appMenu' application.menu class="btn btn-default"}}
-                <i class="fa fa-spinner"></i>
+                <i class="fa fa-bars"></i> Edit menu
               {{/link-to}}
           </div>  
 	    </div>
